--- a/my-portfolio/src/styles/Projects.css
+++ b/my-portfolio/src/styles/Projects.css
@@ -1,5 +1,5 @@
 .projects-container {
-  padding: 40px;
+  padding: 20px;
   background-color: #181717;
   text-align: center;
   overflow-x: hidden;
@@ -16,16 +16,22 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
   margin-top: 20px;
+  padding: 0;
 }
 
 .project-card {
   background: linear-gradient(135deg, #ff9900db, #d4dce0, #e9e5f0, #acacac);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  padding: 10px;
   transition: transform 0.1s ease-in-out;
-  max-width: 100%; 
-  box-sizing: border-box; 
+  max-width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Make space between content and buttons */
+  position: relative; /* Required for absolute positioning of buttons */
+  min-height: 300px; /* Set a minimum height to ensure enough space */
 }
 
 .project-card:hover {
@@ -34,19 +40,29 @@
 
 .project-card h3 {
   font-size: 1.8rem;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   color: #1f1404;
+}
+.description{
+  margin-bottom: 3px;
+}
+.tech-stack{
+  margin-top: 0;
 }
 
 .project-card p {
-  font-size: 1.1rem;
-  color: #666;
-  margin-bottom: 20px;
+  font-size: 1.rem;
+  color: #454242;
+  flex-grow: 1; /* Ensures the content grows to fill available space */
 }
 
 .project-card .links {
   display: flex;
   justify-content: space-between;
+  position: absolute; /* Position the buttons at the bottom */
+  bottom: 20px; /* Add some space from the bottom of the card */
+  left: 20px;
+  right: 20px;
 }
 
 .project-card .links a {
@@ -68,7 +84,17 @@
 /* Responsive Design for smaller screens */
 @media (max-width: 768px) {
   .projects-grid {
-      grid-template-columns: 1fr; 
-      gap: 10px; 
+      grid-template-columns: 1fr;
+      gap: 5px;
+  }
+  
+.project-card{
+  padding: 5px;
+}
+  .description{
+    margin-bottom: 0;
+  }
+  .tech-stack{
+  margin-bottom: 30px;
   }
 }
