--- a/my-portfolio/src/styles/AboutMe.css
+++ b/my-portfolio/src/styles/AboutMe.css
@@ -9,7 +9,7 @@
 .about-me-container h2 {
   font-size: 2.5rem;
   color: #fffefe;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   text-align: center;
   border-bottom: 3px solid #ff9800;
   display: inline-block;
@@ -20,7 +20,7 @@
   width: 160px;
   height: 160px;
   border-radius: 50%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -37,6 +37,45 @@
 
 .about-me-container p:last-child {
   margin-bottom: 0;
+}
+/* Hobby */
+.hobby-section {
+  background-color: #343a48;
+
+  margin: 0 ;
+ 
+}
+
+.hobby-section h3 {
+  font-size: 2rem;
+  color: #fffefe; 
+  margin-bottom: 10px; 
+  margin-top: 10px;
+  text-align: center; 
+  border-bottom: 2px solid #ff9800; 
+  display: inline-block; 
+  padding-bottom: 8px; 
+}
+
+.hobby-section ul {
+  list-style-type: none; 
+  padding: 0; 
+}
+
+.hobby-section li {
+  font-size: 1.2rem; 
+  line-height: 1.8; 
+  color: #fff9f9; 
+  margin-bottom: 15px; 
+  display: flex;
+  align-items: center;
+}
+
+.hobby-section li::before {
+  content: '•'; 
+  color: #ff9800; 
+  font-size: 1.5rem;
+  margin-right: 10px; 
 }
 
 /* Skills Section */
@@ -60,14 +99,14 @@
   padding: 0;
   margin: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
 }
 
 .skills-section li {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   color: #fff9f9;
-  background: linear-gradient(135deg, #1a1f27, #292f3b);
+  background: linear-gradient(135deg, #18191a, #a4a2a072);
   border-radius: 8px;
   padding: 20px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
